# airplay-esp32

./: .clang-tidy  .gitguardian.yml  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CUSTOM_UPDATE_WORKFLOW.md  PLAN.md  README.md  partitions-4m.csv  partitions.csv  platformio.ini  requirements-dev.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.bt  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esparagus-audio-brick  sdkconfig.defaults.esparagus-audio-brick-s3  sdkconfig.defaults.squeezeamp  sdkconfig.defaults.squeezeamp-4m  sdkconfig.defaults.waveshare-esp32s3  sdkconfig.esp32s3  sdkconfig.old
.github/workflows/: ci-release.yml
boards/: CMakeLists.txt  Kconfig  Kconfig.common  board.h  esp32s3-n16r8.json  squeezeamp-4m.json  squeezeamp.json
boards/esp32s3-generic/: Kconfig  board.c  board.json  pio_env.ini  sdkconfig.defaults
boards/squeezeamp/: CMakeLists.txt  Kconfig  board.c  board.json  pio_env.ini  sdkconfig.defaults
boards/squeezeamp-4m/: CMakeLists.txt  board.json  pio_env.ini  sdkconfig.defaults
components/boards/: CMakeLists.txt  Kconfig.common  Kconfig.projbuild  board_common.c  board_common.h  partitions.csv
components/boards/esp32-generic/: board.c
components/boards/esp32s3-generic/: board.c  iot_board.h  kconfig.in
components/boards/esparagus-audio-brick/: board.c
components/boards/squeezeamp/: board.c  iot_board.h  kconfig.in
components/boards/squeezeamp-4m/: board.c  iot_board.h  kconfig.in
components/boards/waveshare-esp32p4/: board.c
components/boards/waveshare-esp32s3/: board.c  iot_board.h
components/dac/: CMakeLists.txt  Kconfig  dac.c
components/dac/include/: dac.h
components/dac_es8311/: CMakeLists.txt  Kconfig  dac_es8311.c  dac_es8311.h
components/dac_tas57xx/: CMakeLists.txt  Kconfig  dac_tas57xx.c  dac_tas57xx.h
components/dac_tas57xx/hybridflows/: DMA80-HF6.cfg
components/dac_tas58xx/: dac_tas58xx.c  dac_tas58xx_eq_data.h
components/display/: CMakeLists.txt  README.md  background.c  display.c  display_st7789.c  idf_component.yml
components/display/include/: display.h
components/spiffs_storage/: spiffs_storage.c  spiffs_storage.h
components/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
data/www/: index.html  logs.html  speedtest.html
main/: CMakeLists.txt  EndianPortable_esp32.c  Kconfig.projbuild  alac_decoder.c  alac_decoder.h  alac_magic_cookie.c  alac_wrapper.cpp  alac_wrapper.h  apple_alac.cpp  apple_alac.h  audio_receiver.c  audio_receiver.h  buttons.c  dacp_client.c  dacp_client.h  hap.c  hap.h  idf_component.yml  led.c  led.h  led_visual.c  led_visual.h  main.c  mdns_airplay.c  playback_control.c  playback_control.h  plist.c  plist.h  ptp_clock.c  ptp_clock.h  rtsp_conn.c  rtsp_crypto.h  rtsp_fairplay.h  rtsp_handlers.c  rtsp_handlers.h  rtsp_message.c  rtsp_message.h  rtsp_server.c  rtsp_server.h  settings.c  (+7 more)
main/apple_alac/: ALACAudioTypes.h  ALACDecoder.cpp  EndianPortable.c
main/audio/: a2dp_sink.c  audio_buffer.c  audio_buffer.h  audio_crypto.c  audio_decoder.c  audio_out_spdif.c  audio_output.c  audio_output.h  audio_output_spdif.c  audio_output_usb.c  audio_output_usb_host.c  audio_receiver.c  audio_receiver.h  audio_receiver_internal.h  audio_resample.c  audio_resample.cpp  audio_resample.h  audio_stream.c  audio_stream.h  audio_stream_buffered.c  audio_stream_realtime.c  audio_timing.c  audio_timing.h  dac_tas57xx.c  dac_tas57xx.h  eq_events.h  software_eq.c  software_eq.h  squeezeamp.c  squeezeamp.h
main/hap/: hap.c  hap_crypto.c  hap_pair_setup.c  hap_pair_verify.c  srp.c  srp.h
main/network/: dns_server.c  ethernet.c  ethernet.h  log_stream.c  mdns_airplay.c  ntp_clock.c  ntp_clock.h  ota.c  ptp_clock.c  ptp_clock.h  socket_utils.c  socket_utils.h  web_server.c  web_server.h  wifi.c  wifi.h
main/plist/: base64.c  bplist_builder.c  bplist_parser.c  plist.h  plist_xml.c
main/rtsp/: rtsp_conn.c  rtsp_conn.h  rtsp_crypto.c  rtsp_events.c  rtsp_events.h  rtsp_fairplay.c  rtsp_handlers.c  rtsp_handlers.h  rtsp_message.c  rtsp_message.h  rtsp_server.c  rtsp_server.h
scripts/: format.sh  gen_eq_tables.py  lint.sh
tests/: test_airplay_metadata_contract.py
(+1 files in other folders)
