idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "mdns_airplay.c"
        "rtsp_server.c"
        "rtsp_conn.c"
        "rtsp_message.c"
        "rtsp_handlers.c"
        "rtsp_fairplay.c"
        "rtsp_crypto.c"
        "plist.c"
        "tlv8.c"
        "hap.c"
        "srp.c"
        "alac_magic_cookie.c"
        "audio_receiver.c"
        "ptp_clock.c"
        "settings.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_ringbuf
        esp_driver_i2s
        esp_timer
)
