idf_component_register(
    SRCS
        "main.c"
        "alac_magic_cookie.c"
        "settings.c"
        "audio/audio_receiver.c"
        "audio/audio_stream.c"
        "audio/audio_stream_realtime.c"
        "audio/audio_stream_buffered.c"
        "audio/audio_decoder.c"
        "audio/audio_buffer.c"
        "audio/audio_timing.c"
        "audio/audio_crypto.c"
        "audio/audio_output.c"
        "rtsp/rtsp_server.c"
        "rtsp/rtsp_conn.c"
        "rtsp/rtsp_message.c"
        "rtsp/rtsp_handlers.c"
        "rtsp/rtsp_fairplay.c"
        "rtsp/rtsp_crypto.c"
        "plist/plist_xml.c"
        "plist/bplist_parser.c"
        "plist/bplist_builder.c"
        "plist/base64.c"
        "hap/hap.c"
        "hap/hap_pair_verify.c"
        "hap/hap_pair_setup.c"
        "hap/hap_crypto.c"
        "hap/srp.c"
        "hap/tlv8.c"
        "network/wifi.c"
        "network/mdns_airplay.c"
        "network/ptp_clock.c"
        "network/socket_utils.c"
    INCLUDE_DIRS "." "audio" "rtsp" "plist" "hap" "network"
    PRIV_REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_ringbuf
        esp_driver_i2s
        esp_timer
)
